// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Searching should match the snapshot when loaded 1`] = `
<Segment
  basic={true}
>
  <Message
    color="teal"
  >
    <MessageHeader>
      Searching Twitter for your results.
    </MessageHeader>
  </Message>
</Segment>
`;

exports[`Searching should match the snapshot when loading 1`] = `
<Segment
  basic={true}
>
  <Message
    color="teal"
  >
    <MessageHeader>
      Searching Twitter for your results.
    </MessageHeader>
  </Message>
  <Loader
    active={true}
    inline="centered"
    size="huge"
  />
</Segment>
`;
